# nvim

./: init.lua  lazy-lock.json
lua/: basic.lua  keybindings.lua  plugins.lua
lua/lsp/: none-ls.lua  setup.lua
lua/lsp/clangd/: CMakeLists.txt
lua/plugin-config/: comment.lua  nvim-tree.lua
